// DBML group export excluding Django system tables
// Generated from Django models and migrations
// Group file: 01_accounts_roles_profiles.dbml
// NHOM 1: TAI KHOAN, VAI TRO, HO SO
// Only includes intra-group relationships

// Primary tables
Table activity_logs {
  id integer [pk, not null]
  user_id integer
  action varchar [not null]
  description varchar
  entity_type varchar
  entity_id integer
  ip_address varchar
  created_at datetime [not null]
  trace_id uuid
  user_agent varchar
}

Table Users {
  id integer [pk, not null]
  username varchar [not null]
  email varchar [not null]
  password_hash varchar [not null]
  full_name varchar [not null]
  phone varchar
  avatar varchar
  address varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
  last_login datetime
  status varchar [not null]
  user_type varchar [not null]
}

Table RefreshTokens {
  id integer [pk, not null]
  user_id integer [not null]
  jti varchar [not null]
  created_at datetime [not null]
  expires_at datetime [not null]
  revoked_at datetime
  replaced_by_id integer
}

Table UserSettings {
  id integer [pk, not null]
  user_id integer [not null]
  account_preferences varchar [not null]
  notification_preferences varchar [not null]
  privacy_preferences varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
}

Table Admin {
  id integer [pk, not null]
  user_id integer
  department varchar [not null]
  role varchar [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  deleted_at datetime
  deleted_by_id integer
  is_deleted boolean [not null]
}

Table SearchEvents {
  id integer [pk, not null]
  user_id integer
  raw_query varchar [not null]
  normalized_query varchar [not null]
  source varchar [not null]
  created_at datetime [not null]
}

// Relationships
Ref: Admin.deleted_by_id > Users.id
Ref: Admin.user_id > Users.id
Ref: RefreshTokens.replaced_by_id > RefreshTokens.id
Ref: RefreshTokens.user_id > Users.id
Ref: SearchEvents.user_id > Users.id
Ref: UserSettings.user_id > Users.id
Ref: Users.deleted_by_id > Users.id
Ref: activity_logs.user_id > Users.id
